--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -83,6 +83,27 @@
 }
 
 
+.show {
+    display: flex;
+    font-size: 1rem;
+    font-weight: 500;
+    gap: 40px;
+    margin-bottom: 60px;
+}
+
+.show h2 {
+    background: -webkit-linear-gradient(16deg, yellow, green);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: .5s;
+}
+
+
+.show h2:hover {
+    transform: scale(.8);
+}
+
+
 @media (max-width:768px) {
     .mywork {
         gap: 50px;
