--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -13,14 +13,15 @@
 }
 
 .mywork .mywork-title h1 {
-    padding: 0 30px;
-    font-size: 3.3rem;
+    padding: 0 20px;
+    font-size: 2.6rem;
     font-weight: 600;
 }
 
 
 .mywork-title img {
     position: absolute;
+    width: 200px;
     bottom: 0;
     right: 0;
     z-index: -1;
@@ -105,21 +106,29 @@
 
 
 @media (max-width:768px) {
+
+
+    .mywork-container {
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
+        margin: 20px
+    }
+
     .mywork {
-        gap: 50px;
+        gap: 40px;
         margin: 20px 80px 0px 30px;
         align-items: start;
 
     }
 
-    .mywork-title h1 {
-        padding: 0;
-        font-weight: 600;
+    .mywork .mywork-title h1 {
+        font-size: 2rem;
     }
 
     .mywork-title img {
-        width: 130px;
-        margin-right: -20px;
+        width: 6rem;
+        margin-right: 10px;
 
     }
 
@@ -135,18 +144,11 @@
 
     }
 
+
     .mywork-showmore p {
 
         font-size: 14px;
 
 
     }
-
-    .mywork-showmore img {
-
-        width: 20px;
-
-
-    }
-
 }
