--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -87,50 +87,52 @@
     .services {
         align-items: start;
         gap: 70px;
-        margin: 20px 80px 0px 30px;
+
     }
 
     .services-title h1 {
         padding: 0;
-        font-size: 50px;
+        font-size: 30px;
     }
 
     .services-title img {
-        width: 138px;
+        width: 100px;
         margin-right: -20px;
     }
 
 
     .services-format {
-        gap: 20px;
-        padding: 30px;
+        gap: .4rem;
+        padding: 1.5rem;
 
     }
 
     .services-readmore img {
-        width: 20px;
+        width: 1rem;
 
     }
 
 
 
     .services-format h2 {
-        font-size: 28px;
+        font-size: 1rem;
 
 
     }
 
     .services-format p {
-        font-size: 18px;
-        line-height: 32px;
-        max-width: 300px;
+        font-size: 1rem;
+        line-height: 1.2rem;
+        max-width: 20vw;
+        max-height: 10vh;
+
 
     }
 
 
     .services-container {
         grid-template-columns: 1fr 1fr;
-        gap: 30px;
+        gap: 20px;
     }
 
 
