--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -124,9 +124,13 @@
         font-size: 1rem;
         line-height: 1.5rem;
         max-width: 20vw;
-        max-height: 14vh;
+        max-height: 10vh;
 
 
+    }
+
+    .services-format .desc {
+        overflow: hidden;
     }
 
 
