--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -92,7 +92,7 @@
 
     .services-title h1 {
         padding: 0;
-        font-size: 30px;
+        font-size: 2rem;
     }
 
     .services-title img {
