--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -132,14 +132,15 @@
 
     }
 
+
     .mywork-container img {
         width: 100%;
         height: 100%;
     }
 
     .mywork-showmore {
-        padding: 18px 17px;
-        font-size: 18px;
+        padding: 14px 10px;
+        font-size: 12px;
         margin: 40px auto;
 
     }
@@ -150,8 +151,11 @@
         font-size: 15px;
         display: flex;
         align-items: center;
-        justify-content: space-between;
 
 
+    }
+
+    .mywork-showmore img {
+        width: 20px;
     }
 }
