--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -9,7 +9,7 @@
 .hero img {
     margin-top: 40px;
     transition: .5s;
-    border-radius:30% 80% ; 
+    border-radius:80% ; 
     height:400px;
     width:300px;
     object:cover;
