--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,5 @@
 .about {
-    margin: 8vw 10vw 5vw;
+    margin: 9vw 10vw 5vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,20 +10,21 @@
 
 .about .about-title {
     position: relative;
-    margin-bottom: 4vw;
 
 }
 
 .about-title h1 {
     cursor: pointer;
-    padding: 0 30px;
-    font-size: 3.3rem;
+    padding: 20px 30px 0;
+    font-size: 2rem;
     font-weight: 600;
 }
 
 .about-title img {
+    width:80px;
+    height:70px;
     position: absolute;
-    bottom: 0;
+    top: 0;
     right: 0;
     z-index: -1;
 
@@ -32,34 +33,34 @@
 
 .about-sections {
     display: flex;
-    gap: 80px;
+    gap: 40px;
 }
 
 
 .about-right {
     display: flex;
     flex-direction: column;
-    gap: 80px;
+    gap: 30px;
 
 }
 
 .about-left img {
-    max-width: 25vw;
-    max-height: 50vh;
-    transition: .3s;
+    display: flex;
+    max-width: 20vw;
+    max-height: 40vh;
+    transition: .2s;
+    margin-top: 50px;
 
 }
 
 .about-left img:hover {
-    transform: scale(0.8);
+    transform: scale(0.9);
 }
 
 
 .about-para {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    font-size: 21px;
+    line-height: 25px;
+    font-size: 1rem;
     font-weight: 400;
 }
 
@@ -69,7 +70,7 @@
 .about-skills {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 16px;
 }
 
 
@@ -84,7 +85,7 @@
 
 .about-skill p {
     min-width: 150px;
-    font-size: 1.4rem;
+    font-size: 1rem;
     font-weight: 400;
 }
 
@@ -93,7 +94,7 @@
     outline: none;
     border: none;
     width: 50%;
-    height: 8px;
+    height: 4px;
     border-radius: 50px;
     background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
     transition: .3s;
@@ -101,7 +102,7 @@
 }
 
 .about-skill:hover {
-    transform: scale(.8);
+    transform: scale(.9);
 }
 
 
@@ -109,8 +110,7 @@
     display: flex;
     width: 100%;
     justify-content: space-around;
-
-    margin: 4vw 0;
+    margin: 1.5vw 0;
 
 
 }
@@ -125,7 +125,7 @@
 
 
 .about-achievement h1 {
-    font-size: 2rem;
+    font-size: 1.2rem;
     font-weight: 500;
     background: -webkit-linear-gradient(270deg, yellow 50.41%, green 90.25%);
     -webkit-background-clip: text;
@@ -134,14 +134,14 @@
 
 
 .about-achievement p {
-    font-size: 1.2rem;
+    font-size: .8rem;
     font-weight: 400;
 }
 
 
 
 .about-achievement:hover {
-    transform: scale(.8);
+    transform: scale(.9);
 }
 
 @media (max-width:768px) {
