--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,28 +2,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 }
 
 
 .hero img {
-    margin-top: 40px;
+    margin-top: 14px;
+    margin-bottom:20px;
     transition: .5s;
     border-radius:80% ; 
-    height:400px;
-    width:300px;
+    height:250px;
+    width:180px;
     object:cover;
 }
 
 
 .hero img:hover {
-    transform: scale(0.8);
+    transform: scale(0.99);
 }
 
 .hero h1 {
     text-align: center;
     width: 70%;
-    font-size: 3rem;
+    font-size: 1.5rem;
     font-weight: 600;
 
 }
@@ -40,7 +41,7 @@
     width: 50%;
     text-align: center;
     font-weight: 300;
-    font-size: 1.2rem;
+    font-size: 1rem;
     line-height: 40px;
 }
 
@@ -49,15 +50,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 40px;
+    gap: 60px;
 
 }
 
 .hero .hero-connect button {
     background: linear-gradient(16deg, skyblue, green);
 
-    min-width: 10vw;
-    font-size: 1.2rem;
+    min-width: 8vw;
+    font-size: 1rem;
     font-weight: 400;
     border-radius: 50px;
     padding: 10px 15px;
@@ -74,7 +75,7 @@
 
 
 .hero-connect button:hover {
-    transform: scale(0.8);
+    transform: scale(0.91);
 }
 
 
