--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 80px;
-    margin: 80px 170px;
+    gap: 30px;
+    margin: 10px 170px;
 }
 
 .mywork .mywork-title {
@@ -13,16 +13,17 @@
 }
 
 .mywork .mywork-title h1 {
-    padding: 0 20px;
-    font-size: 2.6rem;
+    padding: 20px 30px 0;
+    font-size: 2rem;
     font-weight: 600;
 }
 
 
 .mywork-title img {
     position: absolute;
-    width: 200px;
-    bottom: 0;
+    width:80px;
+    height:70px;
+    top: 0;
     right: 0;
     z-index: -1;
 
@@ -40,9 +41,9 @@
 .mywork-container img {
     cursor: pointer;
     box-sizing: border-box;
-    width: 24vw;
+    width: 18vw;
     border-radius: 15%;
-    height: 30vh;
+    height: 26vh;
     transition: .5s;
 
 }
@@ -50,19 +51,19 @@
 
 .mywork-container img:hover {
     border: 4px solid rgb(233, 49, 187);
-    transform: scale(.8);
+    transform: scale(.9);
 }
 
 
 
 .mywork-showmore {
     display: flex;
-    gap: 15px;
+    gap: 10px;
     border-radius: 50px;
     border: 2px solid wheat;
-    padding: 20px 30px;
+    padding: 12px 14px;
     cursor: pointer;
-    margin-bottom: 90px;
+    margin-bottom: 40px;
     transition: .5s;
 
 }
@@ -71,11 +72,11 @@
 .mywork-showmore:hover {
     border: 2px solid green;
     color: green;
-    transform: scale(.8);
+    transform: scale(.9);
 }
 
 .mywork p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 500;
 }
 
@@ -89,7 +90,7 @@
     font-size: 1rem;
     font-weight: 500;
     gap: 40px;
-    margin-bottom: 60px;
+    margin:10px;
 }
 
 .show h2 {
@@ -101,8 +102,14 @@
 
 
 .show h2:hover {
-    transform: scale(.8);
+    transform: scale(.9);
 }
+
+.mywork-showmore img{
+    width:14px;
+    height:16px;
+}
+
 
 
 @media (max-width:768px) {
