--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -26,8 +26,8 @@ a {
 
 .navbar img {
     border-radius: 50%;
-    max-width: 22vw;
-    max-height: 20vh;
+    max-width: 12vw;
+    max-height: 10vh;
     cursor: pointer;
     border: none;
     outline: none;
@@ -36,7 +36,7 @@ a {
 }
 
 img:hover {
-    transform: scale(0.8);
+    transform: scale(0.9);
 
 }
 
@@ -54,7 +54,7 @@ img:hover {
     font-weight: 500;
     list-style: none;
     align-items: center;
-    gap: 60px;
+    gap: 40px;
 
 }
 
@@ -84,12 +84,12 @@ img:hover {
 .nav-connect button {
 
     border-radius: 50px;
-    padding: 15px 8px;
+    padding: 8px 6px;
     background: linear-gradient(267deg, #DA7C25, #b923e1);
     color: white;
     border: none;
     outline: none;
-    font-size: 1rem;
+    font-size: .9rem;
     cursor: pointer;
     transition: .5s;
 }
