--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -1,5 +1,5 @@
 .services {
-    margin: 10vw 8vw;
+    margin: 8vw 8vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,15 +16,17 @@
 
 
 .services-title h1 {
-    padding: 0 30px;
-    font-size: 3.3rem;
+    padding:20px 30px 0;
+    font-size: 2rem;
     font-weight: 600;
 }
 
 
 .services-title img {
     position: absolute;
-    bottom: 0;
+    width:80px;
+    height:70px;
+    top: 0;
     right: 0;
     z-index: -1;
 }
@@ -32,7 +34,7 @@
 .services-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    gap: 30px;
     margin-bottom: 80px;
 }
 
@@ -42,7 +44,7 @@
     flex-direction: column;
     gap: 15px;
     border-radius: 15%;
-    padding: 30px 60px;
+    padding: 18px 26px;
     border: 2px solid white;
     transition: .5s;
 
@@ -52,16 +54,16 @@
 .services-format:hover {
     border: 2px solid #ff00ff;
     background: linear-gradient(45deg, #94005e, #9c3e00);
-    transform: scale(.8);
+    transform: scale(.9);
 }
 
 .services-format h3 {
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 400;
 }
 
 .services-format h2 {
-    font-size: 1.8rem;
+    font-size: 1rem;
     font-weight: 600;
     background: -webkit-linear-gradient(16deg, yellow, green);
     -webkit-background-clip: text;
@@ -70,14 +72,14 @@
 
 .services-format p {
     color: #d4d4d4;
-    font-size: 1.2rem;
-    line-height: 40px;
-    max-width: 380px;
+    font-size: 1rem;
+    line-height: 20px;
+    max-width: 300px;
 }
 
 .services-readmore {
     display: flex;
-    gap: 40px;
+    gap: 30px;
     align-items: center;
     margin-top: 20px;
 }
@@ -85,6 +87,11 @@
 .services-format .desc {
     overflow: hidden;
     line-height: 1.4rem;
+}
+
+.services-readmore img{
+    width:20px;
+    height:20px;
 }
 
 @media (max-width:768px) {
