--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -86,7 +86,7 @@
 
 .about-skill p {
     min-width: 150px;
-    font-size: 1rem;
+    font-size: .8rem;
     font-weight: 400;
 }
 
@@ -97,7 +97,7 @@
     width: 50%;
     height: 4px;
     border-radius: 50px;
-    background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
+    background: linear-gradient(264deg, #df4c08 -5.09%, #8cf1e4 106.28%);
   
       
 }
