--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -82,7 +82,7 @@ img:hover {
 
     border-radius: 50px;
     padding: 8px 6px;
-    background: linear-gradient(267deg, #DA7C25, #b923e1);
+    background: linear-gradient(267deg, #8925da, #e123a8);
     color: white;
     border: none;
     outline: none;
